Set up quote model, controller, and service

--- a/app/views/InspireView.html
+++ b/app/views/InspireView.html
@@ -1,7 +1,12 @@
 <section class="container-fluid">
+  <div class="row">
+    <div class="col-6">
+
+    </div>
+  </div>
 
   <div id="toDoContainer" class="row justify-content-end" hidden>
-    <div class="col-md-3 col-10 mt-3">
+    <div class="col-md-4 col-8 mt-3">
       <div class="shadow px-3 py-2 rounded">
 
         <div class="d-flex">
