Quote draws to page

--- a/app/views/InspireView.html
+++ b/app/views/InspireView.html
@@ -1,14 +1,15 @@
 <section class="container-fluid">
-  <div class="row">
-    <div class="col-6">
 
+
+  <div class="row justify-content-between">
+    <div id="pageQuote" class="col-8 page-quote">
+      <!-- <h2 class="mt-5 ms-3">A Quote</h2>
+      <p class="fs-5 text-end me-5">-<span>Author</span></p> -->
     </div>
-  </div>
 
-  <div id="toDoContainer" class="row justify-content-end" hidden>
-    <div class="col-md-4 col-8 mt-3">
+
+    <div id="toDoContainer" class="col-md-3 col-8 mt-3" hidden>
       <div class="shadow px-3 py-2 rounded">
-
         <div class="d-flex">
           <h4 class="text-start me-auto ps-2">Tasks Remaining: </h4>
           <h4 id="toDoNumber" class="text-end pe-2 me-auto">0</h4>
@@ -48,4 +49,5 @@
       </div>
     </div>
   </div>
+
 </section>
