--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -9,3 +9,19 @@
 .profile-picture.profile-picture-sm {
   height: 64px;
 }
+
+.quote-author {
+  opacity: 0;
+  transition: all .5s linear;
+  filter: blur(20px);
+}
+
+.page-quote {
+  opacity: 10;
+}
+
+.page-quote:hover+.quote-author {
+  opacity: 1;
+  filter: blur(0px);
+  transition: all .5s linear;
+}
