--- a/app/views/InspireView.html
+++ b/app/views/InspireView.html
@@ -49,5 +49,15 @@
       </div>
     </div>
   </div>
+  <div class="row justify-content-center mt-5">
+
+    <div class="col-10">
+      <div class="main-card d-flex rounded justify-content-center mb-3">
+        <div>
+          <p id="timeClock" class="display-2">5:30 PM</p>
+        </div>
+      </div>
+    </div>
+  </div>
 
 </section>
