--- a/app/views/InspireView.html
+++ b/app/views/InspireView.html
@@ -2,11 +2,20 @@
 
 
   <div class="row justify-content-between">
-    <div id="pageQuote" class="col-8 page-quote">
-      <!-- <h2 class="mt-5 ms-3">A Quote</h2>
-      <p class="fs-5 text-end me-5">-<span>Author</span></p> -->
-    </div>
+    <div class="col-8">
+      <div class="row">
+        <div class="col-12">
+          <div id="backgroundDetails" class="mt-2 fs-6">
+            <p>Picture By</p>
+          </div>
+        </div>
+        <div id="pageQuote" class="col-12 page-quote">
+          <!-- <h2 class="mt-5 ms-3">A Quote</h2>
+          <p class="fs-5 text-end me-5">-<span>Author</span></p> -->
+        </div>
 
+      </div>
+    </div>
 
     <div id="toDoContainer" class="col-md-3 col-8 mt-3" hidden>
       <div class="shadow px-3 py-2 rounded">
@@ -49,15 +58,16 @@
       </div>
     </div>
   </div>
-  <div class="row justify-content-center mt-5">
+</section>
 
-    <div class="col-10">
-      <div class="main-card d-flex rounded justify-content-center mb-3">
+<section class="container fixed-bottom">
+  <div class="row justify-content-center">
+    <div class="col-12">
+      <div class="main-card d-flex rounded-pill justify-content-center mb-3 mt-5">
         <div>
           <p id="timeClock" class="display-2">5:30 PM</p>
         </div>
       </div>
     </div>
   </div>
-
 </section>
