Changed some styling

--- a/app/views/InspireView.html
+++ b/app/views/InspireView.html
@@ -1,25 +1,24 @@
+<div>
+
+</div>
+<div id="backgroundDetails" class="mt-2 fs-6 text-readability position-fixed top-0 start-0 ms-2">
+
+</div>
+
 <section class="container-fluid">
 
 
-  <div class="row justify-content-between">
-    <div class="col-8">
-      <div class="row">
-        <div class="col-12">
-          <div id="backgroundDetails" class="mt-2 fs-6">
+  <div class="row justify-content-around align-items-end">
 
-          </div>
-        </div>
-        <div id="pageQuote" class="col-12 page-quote">
-          <!-- <h2 class="mt-5 ms-3">A Quote</h2>
+    <div id="pageQuote" class="col-8 page-quote text-readability">
+      <!-- <h2 class="mt-5 ms-3">A Quote</h2>
           <p class="fs-5 text-end me-5">-<span>Author</span></p> -->
-        </div>
-
-      </div>
     </div>
 
+
     <div id="toDoContainer" class="col-md-3 col-8 mt-3" hidden>
-      <div class="shadow px-3 py-2 rounded">
-        <div class="d-flex">
+      <div class="shadow px-3 py-2 rounded dark-glass  text-readability">
+        <div class="d-flex text-readability">
           <h4 class="text-start me-auto ps-2">Tasks Remaining: </h4>
           <h4 id="toDoNumber" class="text-end pe-2 me-auto">0</h4>
         </div>
@@ -34,7 +33,7 @@
                 <div class="input-group mb-3">
                   <input name="description" type="text" class="form-control" placeholder="Add Task"
                     aria-label="Add Task" required minlength="3" maxlength="500">
-                  <button class="btn btn-outline-dark" type="submit"><i class="mdi mdi-plus"></i></button>
+                  <button class="btn btn-outline-light" type="submit"><i class="mdi mdi-plus"></i></button>
                 </div>
               </form>
 
@@ -63,7 +62,7 @@
 <section class="container fixed-bottom">
   <div class="row justify-content-center">
     <div class="col-12">
-      <div class="main-card d-flex rounded-pill justify-content-center mb-3 mt-5">
+      <div class="main-card d-flex rounded-pill justify-content-center mb-3 mt-5 text-readability">
         <div>
           <p id="timeClock" class="display-2">5:30 PM</p>
         </div>
