--- a/app/views/InspireView.html
+++ b/app/views/InspireView.html
@@ -62,9 +62,24 @@
 <section class="container fixed-bottom">
   <div class="row justify-content-center">
     <div class="col-12">
-      <div class="main-card d-flex rounded-pill justify-content-center mb-3 mt-5 text-readability">
-        <div>
-          <p id="timeClock" class="display-2">5:30 PM</p>
+      <div class="row">
+        <div class="main-card d-flex rounded-pill justify-content-around mb-3 mt-5 text-readability">
+          <div class="col-6">
+            <div>
+              <p id="timeClock" class="display-2">5:30 PM</p>
+            </div>
+          </div>
+          <div class="col-2 d-flex align-items-center">
+            <div id="weatherCard" class="weather-card d-flex rounded">
+              <!-- <div>
+                <p>20° F</p>
+                <p>Cloudy</p>
+              </div>
+              <img src="" alt="Weather Icon"> -->
+            </div>
+          </div>
+
+
         </div>
       </div>
     </div>
